--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leon Template One</title>
     <!-- Main Template  CSS file -->
-    <link rel="stylesheet" href="/css/leon.css">
+    <link rel="stylesheet" href="css/leon.css">
     <!-- Render All Elements Normally -->
-    <link rel="stylesheet" href="/css/normalize.css">
+    <link rel="stylesheet" href="css/normalize.css">
     <!-- The Font Awesome 6 -->
-    <link rel="stylesheet" href="/css/all.min.css">
+    <link rel="stylesheet" href="css/all.min.css">
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
