Fixed the Error

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Start Header -->
     <header class="header">
         <div class="container">
-            <img src="./assets/logo.png" alt="" class="logo">
+            <img src="assets/logo.png" alt="" class="logo">
             <div class="links">
                 <span class="icon">
                     <span></span>
