Fixed the Error

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 </div>
                 <div class="column">
                     <div class="image hide-l">
-                        <img src="/images/mountain2.jpg" alt="">
+                        <img src="images/mountain2.jpg" alt="">
                     </div>
                 </div>
             </div>
