Fixed The Error

--- a/index.html
+++ b/index.html
@@ -123,21 +123,21 @@
             <p>If you do it right, It will last forever</p>
             <div class="portfolio-content">
                 <div class="project">
-                    <img src="/images/portfolio-image1.jpg" alt="">
+                    <img src="images/portfolio-image1.jpg" alt="">
                     <div class="text">
                         <h3>Project Here</h3>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
                     </div>
                 </div>
                 <div class="project">
-                    <img src="/images/portfolio-image2.jpg" alt="">
+                    <img src="images/portfolio-image2.jpg" alt="">
                     <div class="text">
                         <h3>Project Here</h3>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
                     </div>
                 </div>
                 <div class="project">
-                    <img src="/images/portfolio-image3.jpg" alt="">
+                    <img src="images/portfolio-image3.jpg" alt="">
                     <div class="text">
                         <h3>Project Here</h3>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
@@ -159,7 +159,7 @@
             <p>Less is more work</p>
             <div class="about-content">
                 <div class="image">
-                    <img src="/images/mountain2.jpg" alt="">
+                    <img src="images/mountain2.jpg" alt="">
                 </div>
                 <div class="text">
                     <p class="bold-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. At distinctio modi dolor totam, omnis exercitationem ut necessitatibus harum quibusdam deserunt blanditiis sunt a optio fugiat. Reiciendis ex ducimus reprehenderit assumenda.</p>
